// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`React component test: <MUIPlacesAutocomplete> Renders correctly for given application state: Duplicate suggestions aren't rendered 1`] = `
<MenuList>
  <WithStyles(List)
    className={undefined}
    onBlur={[Function]}
    onKeyDown={[Function]}
    role="menu"
  >
    <List
      className={undefined}
      classes={
        Object {
          "dense": "MuiList-dense-48",
          "padding": "MuiList-padding-47",
          "root": "MuiList-root-46",
          "subheader": "MuiList-subheader-49",
        }
      }
      component="ul"
      dense={false}
      disablePadding={false}
      onBlur={[Function]}
      onKeyDown={[Function]}
      role="menu"
    >
      <ul
        className="MuiList-root-46 MuiList-padding-47"
        onBlur={[Function]}
        onKeyDown={[Function]}
        role="menu"
      >
        <WithStyles(MenuItem)
          component="div"
          id="downshift-3-item-0"
          key=".0:$Bellingham, WA, United States"
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseMove={[Function]}
          selected={false}
          tabIndex={-1}
        >
          <MenuItem
            classes={
              Object {
                "root": "MuiMenuItem-root-50",
                "selected": "MuiMenuItem-selected-51",
              }
            }
            component="div"
            id="downshift-3-item-0"
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseMove={[Function]}
            role="menuitem"
            selected={false}
            tabIndex={-1}
          >
            <WithStyles(ListItem)
              button={true}
              className="MuiMenuItem-root-50"
              component="div"
              id="downshift-3-item-0"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseMove={[Function]}
              role="menuitem"
              tabIndex={-1}
            >
              <ListItem
                ContainerComponent="li"
                button={true}
                className="MuiMenuItem-root-50"
                classes={
                  Object {
                    "button": "MuiListItem-button-60",
                    "container": "MuiListItem-container-53",
                    "default": "MuiListItem-default-55",
                    "dense": "MuiListItem-dense-56",
                    "disabled": "MuiListItem-disabled-57",
                    "divider": "MuiListItem-divider-58",
                    "gutters": "MuiListItem-gutters-59",
                    "keyboardFocused": "MuiListItem-keyboardFocused-54",
                    "root": "MuiListItem-root-52",
                    "secondaryAction": "MuiListItem-secondaryAction-61",
                  }
                }
                component="div"
                dense={false}
                disableGutters={false}
                disabled={false}
                divider={false}
                id="downshift-3-item-0"
                onClick={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                <WithStyles(ButtonBase)
                  className="MuiListItem-root-52 MuiListItem-default-55 MuiListItem-gutters-59 MuiListItem-button-60 MuiMenuItem-root-50"
                  classes={
                    Object {
                      "keyboardFocused": "MuiListItem-keyboardFocused-54",
                    }
                  }
                  component="div"
                  disabled={false}
                  id="downshift-3-item-0"
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  role="menuitem"
                  tabIndex={-1}
                >
                  <ButtonBase
                    centerRipple={false}
                    className="MuiListItem-root-52 MuiListItem-default-55 MuiListItem-gutters-59 MuiListItem-button-60 MuiMenuItem-root-50"
                    classes={
                      Object {
                        "disabled": "MuiButtonBase-disabled-63",
                        "keyboardFocused": "MuiButtonBase-keyboardFocused-64 MuiListItem-keyboardFocused-54",
                        "root": "MuiButtonBase-root-62",
                      }
                    }
                    component="div"
                    disableRipple={false}
                    disabled={false}
                    focusRipple={false}
                    id="downshift-3-item-0"
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseDown={[Function]}
                    onMouseMove={[Function]}
                    role="menuitem"
                    tabIndex={-1}
                    type="button"
                  >
                    <div
                      className="MuiButtonBase-root-62 MuiListItem-root-52 MuiListItem-default-55 MuiListItem-gutters-59 MuiListItem-button-60 MuiMenuItem-root-50"
                      id="downshift-3-item-0"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseLeave={[Function]}
                      onMouseMove={[Function]}
                      onMouseUp={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                      role="menuitem"
                      tabIndex={-1}
                    >
                      <div
                        key=".0"
                      >
                        <strong
                          key="0"
                          style={
                            Object {
                              "fontWeight": 500,
                            }
                          }
                        >
                          Bellingham
                        </strong>
                        <span
                          key="1"
                          style={
                            Object {
                              "fontWeight": 300,
                            }
                          }
                        >
                          , WA, United States
                        </span>
                      </div>
                      <WithStyles(TouchRipple)
                        center={false}
                        innerRef={[Function]}
                      >
                        <TouchRipple
                          center={false}
                          classes={
                            Object {
                              "child": "MuiTouchRipple-child-69",
                              "childLeaving": "MuiTouchRipple-childLeaving-70",
                              "childPulsate": "MuiTouchRipple-childPulsate-71",
                              "ripple": "MuiTouchRipple-ripple-66",
                              "ripplePulsate": "MuiTouchRipple-ripplePulsate-68",
                              "rippleVisible": "MuiTouchRipple-rippleVisible-67",
                              "root": "MuiTouchRipple-root-65",
                            }
                          }
                        >
                          <TransitionGroup
                            childFactory={[Function]}
                            className="MuiTouchRipple-root-65"
                            component="span"
                            enter={true}
                            exit={true}
                          >
                            <span
                              className="MuiTouchRipple-root-65"
                            />
                          </TransitionGroup>
                        </TouchRipple>
                      </WithStyles(TouchRipple)>
                    </div>
                  </ButtonBase>
                </WithStyles(ButtonBase)>
              </ListItem>
            </WithStyles(ListItem)>
          </MenuItem>
        </WithStyles(MenuItem)>
        <div
          key=".1"
          onFocus={[Function]}
          style={
            Object {
              "display": "flex",
            }
          }
          tabIndex={-1}
        >
          <span
            style={
              Object {
                "flex": 1,
              }
            }
          />
          <img
            alt=""
            src={Object {}}
          />
        </div>
      </ul>
    </List>
  </WithStyles(List)>
</MenuList>
`;

exports[`React component test: <MUIPlacesAutocomplete> Renders correctly for given application state: Google logo is present in a populated list of suggestions 1`] = `
<MenuList>
  <WithStyles(List)
    className={undefined}
    onBlur={[Function]}
    onKeyDown={[Function]}
    role="menu"
  >
    <List
      className={undefined}
      classes={
        Object {
          "dense": "MuiList-dense-48",
          "padding": "MuiList-padding-47",
          "root": "MuiList-root-46",
          "subheader": "MuiList-subheader-49",
        }
      }
      component="ul"
      dense={false}
      disablePadding={false}
      onBlur={[Function]}
      onKeyDown={[Function]}
      role="menu"
    >
      <ul
        className="MuiList-root-46 MuiList-padding-47"
        onBlur={[Function]}
        onKeyDown={[Function]}
        role="menu"
      >
        <WithStyles(MenuItem)
          component="div"
          id="downshift-4-item-0"
          key=".0:$Bellingham, WA, United States"
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseMove={[Function]}
          selected={false}
          tabIndex={-1}
        >
          <MenuItem
            classes={
              Object {
                "root": "MuiMenuItem-root-50",
                "selected": "MuiMenuItem-selected-51",
              }
            }
            component="div"
            id="downshift-4-item-0"
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseMove={[Function]}
            role="menuitem"
            selected={false}
            tabIndex={-1}
          >
            <WithStyles(ListItem)
              button={true}
              className="MuiMenuItem-root-50"
              component="div"
              id="downshift-4-item-0"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseMove={[Function]}
              role="menuitem"
              tabIndex={-1}
            >
              <ListItem
                ContainerComponent="li"
                button={true}
                className="MuiMenuItem-root-50"
                classes={
                  Object {
                    "button": "MuiListItem-button-60",
                    "container": "MuiListItem-container-53",
                    "default": "MuiListItem-default-55",
                    "dense": "MuiListItem-dense-56",
                    "disabled": "MuiListItem-disabled-57",
                    "divider": "MuiListItem-divider-58",
                    "gutters": "MuiListItem-gutters-59",
                    "keyboardFocused": "MuiListItem-keyboardFocused-54",
                    "root": "MuiListItem-root-52",
                    "secondaryAction": "MuiListItem-secondaryAction-61",
                  }
                }
                component="div"
                dense={false}
                disableGutters={false}
                disabled={false}
                divider={false}
                id="downshift-4-item-0"
                onClick={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                <WithStyles(ButtonBase)
                  className="MuiListItem-root-52 MuiListItem-default-55 MuiListItem-gutters-59 MuiListItem-button-60 MuiMenuItem-root-50"
                  classes={
                    Object {
                      "keyboardFocused": "MuiListItem-keyboardFocused-54",
                    }
                  }
                  component="div"
                  disabled={false}
                  id="downshift-4-item-0"
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  role="menuitem"
                  tabIndex={-1}
                >
                  <ButtonBase
                    centerRipple={false}
                    className="MuiListItem-root-52 MuiListItem-default-55 MuiListItem-gutters-59 MuiListItem-button-60 MuiMenuItem-root-50"
                    classes={
                      Object {
                        "disabled": "MuiButtonBase-disabled-63",
                        "keyboardFocused": "MuiButtonBase-keyboardFocused-64 MuiListItem-keyboardFocused-54",
                        "root": "MuiButtonBase-root-62",
                      }
                    }
                    component="div"
                    disableRipple={false}
                    disabled={false}
                    focusRipple={false}
                    id="downshift-4-item-0"
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseDown={[Function]}
                    onMouseMove={[Function]}
                    role="menuitem"
                    tabIndex={-1}
                    type="button"
                  >
                    <div
                      className="MuiButtonBase-root-62 MuiListItem-root-52 MuiListItem-default-55 MuiListItem-gutters-59 MuiListItem-button-60 MuiMenuItem-root-50"
                      id="downshift-4-item-0"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseLeave={[Function]}
                      onMouseMove={[Function]}
                      onMouseUp={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                      role="menuitem"
                      tabIndex={-1}
                    >
                      <div
                        key=".0"
                      >
                        <strong
                          key="0"
                          style={
                            Object {
                              "fontWeight": 500,
                            }
                          }
                        >
                          Bellingham
                        </strong>
                        <span
                          key="1"
                          style={
                            Object {
                              "fontWeight": 300,
                            }
                          }
                        >
                          , WA, United States
                        </span>
                      </div>
                      <WithStyles(TouchRipple)
                        center={false}
                        innerRef={[Function]}
                      >
                        <TouchRipple
                          center={false}
                          classes={
                            Object {
                              "child": "MuiTouchRipple-child-69",
                              "childLeaving": "MuiTouchRipple-childLeaving-70",
                              "childPulsate": "MuiTouchRipple-childPulsate-71",
                              "ripple": "MuiTouchRipple-ripple-66",
                              "ripplePulsate": "MuiTouchRipple-ripplePulsate-68",
                              "rippleVisible": "MuiTouchRipple-rippleVisible-67",
                              "root": "MuiTouchRipple-root-65",
                            }
                          }
                        >
                          <TransitionGroup
                            childFactory={[Function]}
                            className="MuiTouchRipple-root-65"
                            component="span"
                            enter={true}
                            exit={true}
                          >
                            <span
                              className="MuiTouchRipple-root-65"
                            />
                          </TransitionGroup>
                        </TouchRipple>
                      </WithStyles(TouchRipple)>
                    </div>
                  </ButtonBase>
                </WithStyles(ButtonBase)>
              </ListItem>
            </WithStyles(ListItem)>
          </MenuItem>
        </WithStyles(MenuItem)>
        <div
          key=".1"
          onFocus={[Function]}
          style={
            Object {
              "display": "flex",
            }
          }
          tabIndex={-1}
        >
          <span
            style={
              Object {
                "flex": 1,
              }
            }
          />
          <img
            alt=""
            src={Object {}}
          />
        </div>
      </ul>
    </List>
  </WithStyles(List)>
</MenuList>
`;

exports[`React component test: <MUIPlacesAutocomplete> Renders correctly for given application state: Suggestions rendered from 'suggestions' state 1`] = `
<MenuList>
  <WithStyles(List)
    className={undefined}
    onBlur={[Function]}
    onKeyDown={[Function]}
    role="menu"
  >
    <List
      className={undefined}
      classes={
        Object {
          "dense": "MuiList-dense-48",
          "padding": "MuiList-padding-47",
          "root": "MuiList-root-46",
          "subheader": "MuiList-subheader-49",
        }
      }
      component="ul"
      dense={false}
      disablePadding={false}
      onBlur={[Function]}
      onKeyDown={[Function]}
      role="menu"
    >
      <ul
        className="MuiList-root-46 MuiList-padding-47"
        onBlur={[Function]}
        onKeyDown={[Function]}
        role="menu"
      >
        <WithStyles(MenuItem)
          component="div"
          id="downshift-1-item-0"
          key=".0:$Bellingham, WA, United States"
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseMove={[Function]}
          selected={false}
          tabIndex={-1}
        >
          <MenuItem
            classes={
              Object {
                "root": "MuiMenuItem-root-50",
                "selected": "MuiMenuItem-selected-51",
              }
            }
            component="div"
            id="downshift-1-item-0"
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseMove={[Function]}
            role="menuitem"
            selected={false}
            tabIndex={-1}
          >
            <WithStyles(ListItem)
              button={true}
              className="MuiMenuItem-root-50"
              component="div"
              id="downshift-1-item-0"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseMove={[Function]}
              role="menuitem"
              tabIndex={-1}
            >
              <ListItem
                ContainerComponent="li"
                button={true}
                className="MuiMenuItem-root-50"
                classes={
                  Object {
                    "button": "MuiListItem-button-60",
                    "container": "MuiListItem-container-53",
                    "default": "MuiListItem-default-55",
                    "dense": "MuiListItem-dense-56",
                    "disabled": "MuiListItem-disabled-57",
                    "divider": "MuiListItem-divider-58",
                    "gutters": "MuiListItem-gutters-59",
                    "keyboardFocused": "MuiListItem-keyboardFocused-54",
                    "root": "MuiListItem-root-52",
                    "secondaryAction": "MuiListItem-secondaryAction-61",
                  }
                }
                component="div"
                dense={false}
                disableGutters={false}
                disabled={false}
                divider={false}
                id="downshift-1-item-0"
                onClick={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                <WithStyles(ButtonBase)
                  className="MuiListItem-root-52 MuiListItem-default-55 MuiListItem-gutters-59 MuiListItem-button-60 MuiMenuItem-root-50"
                  classes={
                    Object {
                      "keyboardFocused": "MuiListItem-keyboardFocused-54",
                    }
                  }
                  component="div"
                  disabled={false}
                  id="downshift-1-item-0"
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  role="menuitem"
                  tabIndex={-1}
                >
                  <ButtonBase
                    centerRipple={false}
                    className="MuiListItem-root-52 MuiListItem-default-55 MuiListItem-gutters-59 MuiListItem-button-60 MuiMenuItem-root-50"
                    classes={
                      Object {
                        "disabled": "MuiButtonBase-disabled-63",
                        "keyboardFocused": "MuiButtonBase-keyboardFocused-64 MuiListItem-keyboardFocused-54",
                        "root": "MuiButtonBase-root-62",
                      }
                    }
                    component="div"
                    disableRipple={false}
                    disabled={false}
                    focusRipple={false}
                    id="downshift-1-item-0"
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseDown={[Function]}
                    onMouseMove={[Function]}
                    role="menuitem"
                    tabIndex={-1}
                    type="button"
                  >
                    <div
                      className="MuiButtonBase-root-62 MuiListItem-root-52 MuiListItem-default-55 MuiListItem-gutters-59 MuiListItem-button-60 MuiMenuItem-root-50"
                      id="downshift-1-item-0"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseLeave={[Function]}
                      onMouseMove={[Function]}
                      onMouseUp={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                      role="menuitem"
                      tabIndex={-1}
                    >
                      <div
                        key=".0"
                      >
                        <strong
                          key="0"
                          style={
                            Object {
                              "fontWeight": 500,
                            }
                          }
                        >
                          Bellingham
                        </strong>
                        <span
                          key="1"
                          style={
                            Object {
                              "fontWeight": 300,
                            }
                          }
                        >
                          , WA, United States
                        </span>
                      </div>
                      <WithStyles(TouchRipple)
                        center={false}
                        innerRef={[Function]}
                      >
                        <TouchRipple
                          center={false}
                          classes={
                            Object {
                              "child": "MuiTouchRipple-child-69",
                              "childLeaving": "MuiTouchRipple-childLeaving-70",
                              "childPulsate": "MuiTouchRipple-childPulsate-71",
                              "ripple": "MuiTouchRipple-ripple-66",
                              "ripplePulsate": "MuiTouchRipple-ripplePulsate-68",
                              "rippleVisible": "MuiTouchRipple-rippleVisible-67",
                              "root": "MuiTouchRipple-root-65",
                            }
                          }
                        >
                          <TransitionGroup
                            childFactory={[Function]}
                            className="MuiTouchRipple-root-65"
                            component="span"
                            enter={true}
                            exit={true}
                          >
                            <span
                              className="MuiTouchRipple-root-65"
                            />
                          </TransitionGroup>
                        </TouchRipple>
                      </WithStyles(TouchRipple)>
                    </div>
                  </ButtonBase>
                </WithStyles(ButtonBase)>
              </ListItem>
            </WithStyles(ListItem)>
          </MenuItem>
        </WithStyles(MenuItem)>
        <div
          key=".1"
          onFocus={[Function]}
          style={
            Object {
              "display": "flex",
            }
          }
          tabIndex={-1}
        >
          <span
            style={
              Object {
                "flex": 1,
              }
            }
          />
          <img
            alt=""
            src={Object {}}
          />
        </div>
      </ul>
    </List>
  </WithStyles(List)>
</MenuList>
`;
